  verknüpft ist, ein Projekt ausgewählt, so wird dieses Projekt auch
  automatisch beim verknüpften Pflichtenheft eingetragen.
- Druckvorlagen: die in Positionen verwendeten Variablen können nun
  Platzhalter enthalten, die vom Beleg selber stammen. So könnte
  z.B. in der Artikelbeschreibung automatisch die Rechnungsnummer
  ersetzt werden. Beispiel: »Abrechnungszeitraum bis <%invnumber%>«

Bugfixes (Tracker: https://www.kivitendo.de/redmine):





2021-08-10 - Release 3.5.8

Kleinere neue Features und Detailverbesserungen:

- Erzeugnis fertigen, kann jetzt auf Lagerteile aus anderem Lagern zurückgreifen
  und die Fertigung liefert keinen Fehler mehr. Einstellbar in der
  Mandantenkonfiguration.
- Erzeugnisse fertigen, kann auch Dienstleistungen verbrauchen, falls
  diese ein Erzeugnisbestandteil sind. Standardmäßíg deaktiviert.
  Aktivierbar in der Mandantenkonfiguration (Bereich Lager).
- API- Änderung Erzeugnis fertigen nutzt jetzt SL/Helper/Inventory.pm
- Falls der Mandant zu jeder Buchung einen Beleg hinzufügen möchte,
  und dies in der Mandantenkonfiguration einstellt, dann öffnet sich nach
  dem Buchen von Dialog-/Kreditoren- und EK-Rechnungs-Buchungen der
  Dokumenten-Reiter des entsprechenden Belegs.
  Bei dieser Einstellung gibt für Dialog- und Kreditoren-Buchungen eine
  zweite Aktion unterhalb von "Buchen", nämlich "Buchen und neue Buchung".
  Ist die Option ausgestellt, ist das Verhalten nach dem Buchen wie zuvor
  und es gibt eine zweite Aktion "Buchen und Dokument hochladen", mit der
  in den Dokumenten-Tab gesprungen werden kann.
- Seriennummer ist jetzt ein Pflichtfeld für Lieferscheine (Einkauf und Verkauf),
  falls die Ware im Beleg in den Stammdaten mit "Hat eine Serienummer" markiert ist.
- Einkaufsbericht um Anzeige erstes Sollkonto erweitert
- Einkaufsbericht um Anzeige Erfassungsdatum erweitert
- Import der Lohnbuchhaltungsdatensätze aus DATEV Lohnbuchhaltung

Bugfixes (Tracker: https://www.kivitendo.de/redmine):
